# ai_bi_backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: deps.py
app/api/routes/: query.py
app/core/: rate_limiter.py  redis_client.py
app/db/: models.py
app/schemas/: query.py
app/services/: cache.py  explanation.py  llm_client.py  nl_to_sql.py  query_executor.py  schema_loader.py  sql_validator.py
frontend/: README.md  api.py  streamlit_app.py  utils.py
setup_scripts/: README.md  db_user_setup.py  gen_test_table_data.py  update_readme_coverage_badge.py
test_setup/: gen_test_table_data.py
tests/: conftest.py  test_api_deps.py  test_cache.py  test_db_session.py  test_llm_client.py  test_main.py  test_query.py  test_rate_limiter.py  test_sql_validator.py
