[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bi-backend"
version = "0.1.0"
description = "AI-powered Business Intelligence backend built with FastAPI and PostgreSQL."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
authors = [
  { name = "Salad Guyo", email = "saladguyo60@gmail.com" }
]
classifiers = [
  # How mature is this project
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  # Supported python versions
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi==0.128.5",
  "uvicorn[standard]==0.40.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "SQLAlchemy==2.0.46",
  "psycopg2-binary==2.9.11",
  "openai==2.21.0",
  "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.15.1",
  "black>=25.11.0",
  "isort>=7.0.0",
  "pre-commit>=4.5.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]


[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
