[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bi-backend"
version = "0.1.0"
description = "AI-powered Business Intelligence backend built with FastAPI and PostgreSQL."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
authors = [
  { name = "Salad Guyo", email = "saladguyo60@gmail.com" }
]
classifiers = [
  # How mature is this project
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  # Supported python versions
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi>=0.128.5",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "SQLAlchemy>=2.0.46",
  "psycopg2-binary>=2.9.11",
  "openai>=2.21.0",
  "python-dotenv>=1.2.1",
  "build>=1.4.0",
  "redis>=7.2.0"
]

[dependency-groups]
test = [
  "pytest>=9.0.2",
  "pytest-cov>=5.0.0",
  "Faker>=40.4.0"
]
dev = [
  { include-group = "test" },
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "black>=25.11.0",
  "isort>=7.0.0",
  "pre-commit>=4.5.0",
]

[project.urls]
repository = "https://github.com/saladgg/ai_bi_backend"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
include = [
    "app/**/*.py",
    "tests/**/*.py",
]
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.14"
packages = ["app"]
explicit_package_bases = true
disable_error_code = [
  "var-annotated", "import-untyped",
  "annotation-unchecked", "union-attr", "arg-type"
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.isort]
extend_skip_glob = ["*/build/*", "*/docs/*"]
known_first_party = ["app", "tests"]
line_length = 88
multi_line_output = 3
profile = "black"


[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
